# EasyAsPermissions

./: README.md  pyproject.toml
_for_developers/: README.md  eap_api.py
src/endstone_easyaspermissions/: __init__.py  easyaspermissions.py  manager.py
src/endstone_easyaspermissions/Manage/: add.py  edit.py  roles.py  submit.py
src/endstone_easyaspermissions/Players/: edit.py  permissions.py
src/endstone_easyaspermissions/Utils/: utils.py
src/endstone_easyaspermissions/_for_developers/: README.md  api.py
